use plain java for the set